# tenma-serial

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  gtkIndicator.py  setup.cfg  setup.py  tenmaControl.py  tenmaDcLib.py  tenmaDcPower.py  unityIndicator.py
docs/: conf.py  index.rst  requirements.txt
docs/tools/: tenma-applet.rst  tenma-control.rst
examples/python/: output_plotting.py
tenma/: __init__.py  gtkIndicator.py  tenmaControl.py  tenmaDcLib.py
tests/: test_dclib.py  test_psu.py  test_tenma.py
