[metadata]
name = tenma-serial
author = Jordi Castells
author_email = jordi.kstells@gmail.com
summary = Serial control of tenma device
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/kxtells/tenma-serial
license = GNU-3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: GTK
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages = tenma

[entry_points]
console_scripts =
    tenmaControl.py = tenma.tenmaControl:main
    gtkIndicator.py = tenma.gtkIndicator:main

[tool:pytest]
pep8ignore =
    E402
    E501
    bwb/message/message.py ALL
    bt.py E701
xfail_strict = true
